--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="drawer"></div>
+    <div id="backdrop-hook"></div>
+    <div id="modal-hook"></div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -39,5 +42,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMRH1T1N6HGhSZ_H4skPzgb7FK7vl7UBQ"
+    ></script>
   </body>
 </html>
